syntax = "proto3";

option csharp_namespace = "EpinelPS.Net";

import "google/protobuf/timestamp.proto";
import "google/protobuf/Duration.proto";

message SentryDataResponse {
  double Unknown1 = 1;
  double Unknown2 = 2;
}

message CheckVersionRequest {
  string Version = 1;
}

message CheckVersionResponse {
  int32 VersionStatus = 1; // 0: good, 1: outdated, 2: unsupported
}

message GetServerInfoRequest {

}
message GetServerInfoResponse {
	int32 worldId = 1;
	string matchUrl = 2;
}

message NetMaintenanceWindow {
	google.protobuf.Timestamp from = 1;
	google.protobuf.Timestamp to = 2;
}

message MaintenanceNoticeResponse {
	NetMaintenanceWindow window = 1;
	bool isWhitelisted = 2;
}

message ResourceHostRequest {
  string rversion = 1;
}

message ResourceHostResponse {
  string version = 1;
  string baseUrl = 2;
  map<string, string> coreVersionMap = 3;
  map<string, string> dataPackVersionMap = 4;
}

message StaticDataPackRequest {
}

message StaticDataPackResponse {
	string Url = 1;
	int64 FileSize = 2;
	bytes Sha256Sum = 3;
	bytes Salt1 = 4;
	bytes Salt2 = 5;
	string Version = 6;
}